[metadata]
name = mlsandpit
version = 0.0.1
author = Andrew Everall
author_email = andrew.everall1995@gmail.com
url = https://github.com/aeverall/mlsandpit
license = MIT
description = Simple tools and examples for Machine Learning algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/aeverall/mlsandpit/issues
    Documentation = https://github.com/aeverall/mlsandpit#README.md
    Source Code = https://github.com/aeverall/mlsandpit
    User Support = https://github.com/aeverall/mlsandpit/issues

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
	setuptools_scm

[options.packages.find]
where = mlsandpit
exclude = test*

[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage

[flake8]
max-line-length = 79
exclude = __init__.py,build,.eggs

[tool:pytest]
addopts = --cov=mlsandpit